fixed nav bar spacing

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    max-width: 1280px;
+    max-width: 1500px;
     width: 90%;
     margin: 0 auto;
 }
@@ -17,15 +17,19 @@ header {
 nav {
     display: flex;
     justify-content: flex-end;
+    padding-top: 20px;
 }
 
 nav ul {
     display: flex;
     justify-content: space-between;
-
-    width: 50%;
 }
 
 nav a {
     @include navigation;
+    padding: 20px;
+    margin: 10px;
+}
+nav a:hover {
+    color: $light-blue;
 }
