--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,7 @@
 @import './partials/reset';
 @import './partials/typography';
 @import './partials/header';
+
+* {
+    transition: 500ms all;
+}
